frontend/test/should_pass/exectype_AssignMapAccessToVarUntyped2.grg
using exectype;

rule r
{
	modify  {
		exec({::i=::n[::k]});
	}
}