frontend/test/should_fail/exectype_SetVisited3.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia && i:int=0 && y:int=42 && {x.visited[i]=y});
	}
}